--- a/client/views/manage-data/manage-data.html
+++ b/client/views/manage-data/manage-data.html
@@ -12,18 +12,19 @@
     </div>
     <div id="export-tools" class="col s12">
       <div>
+        <p>
+          Export your data as an .xml file using the download button below.
+        </p>
         <button data-export type="button">Export</button>
       </div>
     </div>
     <div id="import-tools" class="col s12">
       <div class="file-field input-field">
-        <input class="file-path validate" type="text"/>
         <div class="btn">
           <span>Upload</span>
           <input data-import-file type="file" />
         </div>
       </div>
-      <button data-import type="button">Import</button>
     </div>
   </div>
 
