--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -46,6 +46,9 @@
 .tile .tile-body {
   margin-top: 5px;
 }
+.tile .tile-body * {
+  max-width: 100%;
+}
 .tile-action {
   width: 100%;
   height: 40px;
@@ -99,4 +102,7 @@
 }
 #tile-big .content {
   margin-top: 20px;
+}
+#tile-big .content * {
+  max-width: 100%:
 }
