More complete styling for Modals in general, Data Management dialog now has three states: backup, restore & merge.  Toasts to confirm data operations such as download/upload.

--- a/client/modals.less
+++ b/client/modals.less
@@ -5,6 +5,9 @@
   border-radius: 10px;
 }
 .modal .modal-content {
+  padding: 20px;
+}
+.modal.bare > .modal-content {
   padding: 0;
 }
 p.modal-body {
