Overview screen is more informative for first-time visitors.  Includes instructions on creating new tiles, as well as importing & exporting.

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -53,6 +53,12 @@
         <i class="mdi-content-create"></i>
       </a>
       button to make a new Tile!
+      <br>
+      You can also use the
+      <a data-manage-data class="btn-floating indigo z-depth-2" data-tooltip-direction="s" data-tooltip="Manage Data">
+        <i class="mdi-file-attachment"></i>
+      </a>
+      button to backup & restore your data.
     {{else}}
       This user doesn't have any Tiles yet!
     {{/if}}
