Abstracted Profile and Data settings to single dialog. Replaced data and URL menu icons. URL is required on registration.

--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -28,6 +28,11 @@
             <input id="user-password-confirm" type="password"/>
             <label for="user-password-confirm">Confirm Password</label>
           </div>
+          <div class="input-field">
+            <i class="mdi-action-language prefix"></i>
+            <input id="user-public-url" type="text"/>
+            <label for="user-public-url">Your URL</label>
+          </div>
           <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign Up</button>
         </form>
       </div>
