--- a/client/views/controls/all-tiles-controls/all-tiles-controls.html
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.html
@@ -20,11 +20,11 @@
                 <i class="mdi-content-create"></i>
               </a>
             </li>
-            <li>
+           <!-- <li>
               <a href="/setup" class="btn-floating deep-orange lighten-1 z-depth-2" data-tooltip-direction="w" data-tooltip="Change URL">
                 <i class="mdi-action-language"></i>
               </a>
-            </li>
+            </li>  -->
             <li>
               <a data-tile-sort class="btn-floating cyan z-depth-2 {{#if disableTileSort}}disabled{{/if}}" data-tooltip-direction="w" data-tooltip="Sort Tiles">
                 <i class="mdi-action-view-module"></i>
@@ -36,10 +36,15 @@
               </a>
             </li>
             <li>
+              <a data-settings class="btn-floating indigo z-depth-2" data-tooltip-direction="w" data-tooltip="Settings">
+                <i class="mdi-action-settings"></i>
+              </a>
+            </li>
+            <!-- <li>
               <a data-manage-data class="btn-floating indigo z-depth-2" data-tooltip-direction="w" data-tooltip="Manage Data">
                 <i class="mdi-file-attachment"></i>
               </a>
-            </li>
+            </li>  -->
           {{else}}
             {{#if currentUser.profile.public_url}}
               <li>
