--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -30,6 +30,7 @@
 }
 .tile .tile-content p {
   margin: initial;
+  margin-bottom: 10x;
 }
 .tile .tile-content:hover {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -48,6 +49,7 @@
 }
 .tile .tile-body * {
   max-width: 100%;
+  height: 100%;
 }
 .tile-action {
   width: 100%;
