Fix improperly padded fixed-footers for full screen modals.

--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -7,6 +7,10 @@
   z-index: 1000;
   text-align: right;
 }
+.modal.modal-fixed-footer .modal-footer {
+  left: 0;
+  right: 0;
+}
 .modal .modal-footer button.btn {
   float: none;
   z-index: 1001;
