Autofocus Title field, closes #100

--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -2,7 +2,7 @@
   <div id="big-tile-edit-pane">
     <div class='input-field'>
       <i class="mdi-content-create prefix"></i>
-      <input id='tile-title' type='text' class='tile-title' value="{{tile.title}}"/>
+      <input id='tile-title' type='text' class='tile-title' value="{{tile.title}}" autofocus=true/>
       <label for='tile-title' class="{{activeOrNot tile.title}}">Title</label>
     </div>
     <div class='input-field'>
