New user verification moved out of turnkey or server-method logic, into `server/accounts.coffee`

--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -10,7 +10,7 @@
         <form id="register-form">
           <div class="input-field">
             <i class="mdi-social-person prefix"></i>
-            <input id="user-profile-name" type="text"/>
+            <input id="user-profile-name" type="text" autofocus=true/>
             <label for="user-profile-name">Your Name</label>
           </div>
           <div class="input-field">
