All URL verification has been moved into the single server method verifyURL.

--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -10,6 +10,7 @@
 .modal.modal-fixed-footer .modal-footer {
   left: 0;
   right: 0;
+  padding-right: 15px;
 }
 .modal .modal-footer button.btn {
   float: none;
