--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -44,7 +44,7 @@
   <div id="home-container" class="centered-container">
     {{#loginScreen }}
       <p>
-        Welcome to TilesJS!  Sign in or whatever.  <a href="/register">Don't have an account?</a>
+        Welcome to TilesJS!  Sign in or whatever.
       </p>
     {{/loginScreen}}
   </div>
@@ -80,6 +80,9 @@
         {{#if modal}}
           <button id="cancel-tile-edit" type="button" class="modal-login-button btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
         {{/if}}
+        <div class="center">
+          <a href="/register">Don't have an account?</a>
+        </div>
       </form>
     </div>
   </div>
