--- a/client/views/settings/settings.less
+++ b/client/views/settings/settings.less
@@ -2,3 +2,11 @@
   padding: 0;
   margin: 0;
 }
+
+.settings-modal form {
+  padding-top: 30px;
+}
+
+.settings-modal form button {
+  margin-left: 3rem;
+}
