URL icon in settings dialog is green for a valid URL, red for an invalid URL.

--- a/client/views/settings/settings.html
+++ b/client/views/settings/settings.html
@@ -92,7 +92,7 @@
           </div>
         </i>
       {{else}}
-        <i class="mdi-action-language prefix"></i>
+        <i class="mdi-action-language prefix" style="color: {{#if urlIs "valid"}}#4CAF50{{else}}#F44336{{/if}}"></i>
       {{/if}}
       <input id="user-public-url" type="text" value="{{currentUser.profile.public_url}}"/>
       <label for="user-public-url" class="active">Your URL</label>
