Replace Manage Data icons in home page with new Unified Settings Dialog icon.

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -54,11 +54,10 @@
       </a>
       button to make a new Tile!
       <br>
-      You can also use the
-      <a data-manage-data class="btn-floating indigo z-depth-2" data-tooltip-direction="s" data-tooltip="Manage Data">
-        <i class="mdi-file-attachment"></i>
+      You can also backup & restore your data in the Settings panel:
+      <a data-settings class="btn-floating indigo z-depth-2" data-tooltip-direction="s" data-tooltip="Settings">
+        <i class="mdi-action-settings"></i>
       </a>
-      button to backup & restore your data.
     {{else}}
       This user doesn't have any Tiles yet!
     {{/if}}
