Created `/users` route to list all currently registered users and their publicURL's.

--- a/client/views/all-tiles/all-tiles.html
+++ b/client/views/all-tiles/all-tiles.html
@@ -25,7 +25,7 @@
     {{#each sortedCategories}}
       {{> category category=this tiles=../sortedTiles}}
     {{/each}}
-    <div class="vertical-spacer valign-wrapper" style="color: hsl(0, 65%, 50%);"></div>
+    <div class="vertical-spacer valign-wrapper"></div>
   {{/if}}
 </template>
 
