Updated foreground/background colours

--- a/client/views/navbar/navbar.less
+++ b/client/views/navbar/navbar.less
@@ -3,9 +3,10 @@
 nav {
   position: fixed;
   height: @navbarHeight;
-  background-color: transparent;
+  background-color: #fff;
   box-shadow: none;
   color: #000;
+  z-index: 10;
 }
 nav:hover {
   border-color: @darkRed;
