--- a/tiles.less
+++ b/tiles.less
@@ -10,6 +10,9 @@ html {
   height: 100%;
   font-size: inherit; /* overrides bootstrap  */
 }
+body {
+  background-color: #F9F9F9;
+}
 ul {
   list-style-type: disc;
   margin-left: 20px;
@@ -235,6 +238,9 @@ input[type=date]::-webkit-inner-spin-button {
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
+}
+.category-title {
+  background-color: #fff;
 }
 .category-title,
 .vertical-spacer {
