Added bottom padding to full screen edit pane.

--- a/client/views/edit-tile/edit-tile.less
+++ b/client/views/edit-tile/edit-tile.less
@@ -1,7 +1,7 @@
 @import "global-less";
 
 #big-tile-edit-pane {
-  padding: 20px;
+  padding: 20px 20px 64px 20px;
 }
 .modal .modal-footer {
   z-index: 1000;
