--- a/tiles.less
+++ b/tiles.less
@@ -212,7 +212,7 @@ input[type=date]::-webkit-inner-spin-button {
   height: 100%;
   width: 100%;
   overflow-x: auto;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
 }
 #tile-container {
   position: relative;
