Added date formatting and rendering to both Small and Big tiles based on new partial-date-picker data structures.

--- a/client/views/partial-date-picker/partial-date-picker.less
+++ b/client/views/partial-date-picker/partial-date-picker.less
@@ -4,6 +4,7 @@
   height: 3rem;
   padding-left: 3rem;
   line-height: 3rem;
+  margin-bottom: 30px;
 }
 .partial-date-picker .select-wrapper {
   max-width: 150px;
