--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -3,11 +3,7 @@
     <a href="/{{publicURL}}/{{tile._id}}" class="tile-content-anchor">
       <div class="tile-content pointer">
         <div class="tile-title">{{tile.title}}</div>
-        {{#if hasDates tile}}
-          <div class="tile-dates">
-            {{{formatTileDates tile.dates}}}
-          </div>
-        {{/if}}
+        {{> tileDates }}
         <div class="tile-body">
           {{{tile.content}}}
         </div>
@@ -37,23 +33,16 @@
       <div class='title'>
         {{tile.title}}
       </div>
-      {{#if hasDates tile}}
-        <div class="dates">
-          {{{formatTileDates tile.dates}}}
-        </div>
-      {{/if}}
+      {{> tileDates }}
       <div class='content'>
         {{{tile.content}}}
       </div>
     </div>
-    <!--
-    {{#unless preview}}
-      <div class="modal-footer">
-        <button id="close-view-modal" type="button" class="btn waves-effect waves-light modal-action modal-close grey"><i class="mdi-action-done left"></i>Done</button>
-        <div class="progress">
-          <div class="indeterminate"></div>
-        </div>
-      </div>
-    {{/unless}}-->
+  </div>
+</template>
+
+<template name="tileDates">
+  <div class="tile-dates">
+    {{{formatTileDates tile.dates}}}
   </div>
 </template>
