Updated styles for date picker sizes and line breaking on mobile.  Big tile overlays are now always fullscreen.

--- a/client/views/controls/all-tiles-controls/all-tiles-controls.html
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.html
@@ -8,7 +8,7 @@
     {{/if}}
   {{else}}
     <!--  Generic Tile Menu  -->
-    <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <div class="fixed-action-btn">
       {{#if currentUser}}
         <a data-toggle-menu class="btn-floating deep-purple btn-large {{#if open}}darken-1{{else}}accent-1{{/if}} z-depth-2 menu-icon"  data-tooltip-direction="w" data-tooltip="Menu">
           <i class="mdi-navigation-menu {{#if open}}open{{/if}}"></i>
