--- a/client/views/controls/all-tiles-controls/all-tiles-controls.less
+++ b/client/views/controls/all-tiles-controls/all-tiles-controls.less
@@ -1,4 +1,8 @@
 /*    Material Menu & Tooltip Styles   */
+.fixed-action-btn {
+  bottom: 25px;
+  right: 24px;
+}
 .fixed-action-btn ul {
   bottom: 45px !important;
   list-style-type: none;
