--- a/client/views/partial-date-picker/partial-date-picker.less
+++ b/client/views/partial-date-picker/partial-date-picker.less
@@ -1,19 +1,20 @@
 @import "global-less";
 
 .partial-date-picker {
-  height: 3rem;
+  min-height: 3rem;
   padding-left: 3rem;
   line-height: 3rem;
   margin-bottom: 30px;
 }
 .partial-date-picker .select-wrapper {
   max-width: 150px;
+  height: 3rem;
 }
 .partial-date-picker .select-wrapper:hover {
   background-color: @lightGrey;
 }
 .partial-date-picker .dropdown-content {
-  z-index: 3;
+  z-index: 10;
 }
 .partial-date-picker a {
   cursor: pointer;
