--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -89,7 +89,7 @@
 #tile-big {
   border-top-style: solid;
   border-width: 10px;
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   height: 100%;
   padding: 20px;
 }
