--- a/tiles.less
+++ b/tiles.less
@@ -269,4 +269,5 @@ input[type=date]::-webkit-inner-spin-button {
 }
 .materialize-modal.full-screen .modal-content {
   height: 100%;
+  padding: 0 0 64px 0;
 }
