--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -31,6 +31,10 @@
 .tile .tile-content p {
   margin: initial;
   margin-bottom: 10x;
+  text-indent: 15px;
+}
+#tile-big .content p {
+  text-indent: 15px;
 }
 .tile .tile-content:hover {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
