Only move img elements for #113.  Added existence-sanity checks to `formatTileDates`

--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -43,6 +43,6 @@
 
 <template name="tileDates">
   <div class="tile-dates">
-    {{{formatTileDates tile.dates}}}
+    {{{formatTileDates}}}
   </div>
 </template>
