--- a/client/views/tile/tile.less
+++ b/client/views/tile/tile.less
@@ -36,8 +36,8 @@
 #tile-big .content p {
   text-indent: 15px;
 }
-.tile .tile-content p > *,
-#tile-big .content p > * {
+.tile .tile-content p > img,
+#tile-big .content p > img {
   position: relative;
   right: 15px;
 }
