Migrated Modal Engine
Now using my own package, msolters:modalize
(http://atmospherejs/msolters/modalize).  No longer using locally hacked
packages.

This allows much greater control and flexibility of UI interfaces than
we had before.  All previous MaterializeModal implementations have been
moved to the new framework.

Should move Settings & URL modals to a bottomSheet.

--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -28,17 +28,23 @@
 </template>
 
 <template name="tileBig">
-  <div id="tile-big" style="border-color: {{tile.color}}">
-    <div class="">
-      <div class='title'>
-        {{tile.title}}
-      </div>
-      {{> tileDates }}
-      <div class='content'>
-        {{{tile.content}}}
+  {{#modalizeBody}}
+    <div id="tile-big" style="border-color: {{tile.color}}">
+      <div class="">
+        <div class='title'>
+          {{tile.title}}
+        </div>
+        {{> tileDates }}
+        <div class='content'>
+          {{{tile.content}}}
+        </div>
       </div>
     </div>
-  </div>
+  {{/modalizeBody}}
+
+  {{#modalizeFooter}}
+    <button data-modalize-close class="btn waves-effect waves-light modal-action grey"><i class="mdi-action-done left"></i>Done</button>
+  {{/modalizeFooter}}
 </template>
 
 <template name="tileDates">
