--- a/client/views/turnkey/turnkey.html
+++ b/client/views/turnkey/turnkey.html
@@ -59,33 +59,35 @@
 </template>
 
 <template name="loginForm">
-  <div class="turnkey-options flex-row flex-around">
-    <div class="valign-wrapper">
-      {{> socialLogin action="login" }}
+  {{#modalizeBody}}
+    <div class="turnkey-options flex-row flex-around">
+      <div class="valign-wrapper">
+        {{> socialLogin action="login" }}
+      </div>
+      <div class="vertical-divider"></div>
+      <div class="valign-wrapper">
+        <form id="login-form">
+          <div class="input-field">
+            <i class="mdi-communication-email prefix"></i>
+            <input id="user-email" type="email"  />
+            <label for="user-email">E-mail</label>
+          </div>
+          <div class="input-field">
+            <i class="mdi-action-lock prefix"></i>
+            <input id="user-password" type="password"/>
+            <label for="user-password">Password</label>
+          </div>
+          <button type="submit" class="{{#if modal}}modal-login-button{{/if}} btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
+          {{#if modal}}
+            <button data-modalize-close type="button" class="modal-login-button btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
+          {{/if}}
+          <div class="center">
+            <a href="/register">Don't have an account?</a>
+          </div>
+        </form>
+      </div>
     </div>
-    <div class="vertical-divider"></div>
-    <div class="valign-wrapper">
-      <form id="login-form">
-        <div class="input-field">
-          <i class="mdi-communication-email prefix"></i>
-          <input id="user-email" type="email"  />
-          <label for="user-email">E-mail</label>
-        </div>
-        <div class="input-field">
-          <i class="mdi-action-lock prefix"></i>
-          <input id="user-password" type="password"/>
-          <label for="user-password">Password</label>
-        </div>
-        <button id="save-tile-edit" type="submit" class="{{#if modal}}modal-login-button{{/if}} btn waves-effect waves-light modal-action red"><i class="mdi-content-send right"></i>Sign In</button>
-        {{#if modal}}
-          <button id="cancel-tile-edit" type="button" class="modal-login-button btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
-        {{/if}}
-        <div class="center">
-          <a href="/register">Don't have an account?</a>
-        </div>
-      </form>
-    </div>
-  </div>
+  {{/modalizeBody}}
 </template>
 
 <template name="socialLogin">
