--- a/client/views/edit-tile/edit-tile.html
+++ b/client/views/edit-tile/edit-tile.html
@@ -1,31 +1,34 @@
 <template name="tileBigEdit">
-  <div id="big-tile-edit-pane">
-    <div class='input-field'>
-      <i class="mdi-content-create prefix"></i>
-      <input id='tile-title' type='text' class='tile-title' value="{{tile.title}}" autofocus=true/>
-      <label for='tile-title' class="{{activeOrNot tile.title}}">Title</label>
+  {{#modalizeBody}}
+    <div id="big-tile-edit-pane">
+      <div class='input-field'>
+        <i class="mdi-content-create prefix"></i>
+        <input id='tile-title' type='text' class='tile-title' value="{{tile.title}}" autofocus=true/>
+        <label for='tile-title' class="{{activeOrNot tile.title}}">Title</label>
+      </div>
+      <div class='input-field'>
+        <i class="mdi-action-list prefix"></i>
+        <input id='tile-category' name="categoryresult" type='text' class='tile-category form-control typeahead' autocomplete="off" spellcheck="off" value="{{tile.category}}" data-source="categories"/>
+        <label for='tile-category' class="{{activeOrNot tile.category}}">Category</label>
+      </div>
+      <div class='input-field'>
+        <i class="mdi-action-label-outline prefix"></i>
+        {{> partialDatePicker date=t0}}
+        <label for='tile-t0' class="active">Start Date</label>
+      </div>
+      <div class='input-field'>
+        <i class="mdi-action-label-outline prefix"></i>
+        {{> partialDatePicker date=t1}}
+        <label for='tile-t1' class="active">End Date</label>
+      </div>
+      <div id="tile-edit-content">{{{tile.content}}}</div>
     </div>
-    <div class='input-field'>
-      <i class="mdi-action-list prefix"></i>
-      <input id='tile-category' name="categoryresult" type='text' class='tile-category form-control typeahead' autocomplete="off" spellcheck="off" value="{{tile.category}}" data-source="categories"/>
-      <label for='tile-category' class="{{activeOrNot tile.category}}">Category</label>
-    </div>
-    <div class='input-field'>
-      <i class="mdi-action-label-outline prefix"></i>
-      {{> partialDatePicker date=t0}}
-      <label for='tile-t0' class="active">Start Date</label>
-    </div>
-    <div class='input-field'>
-      <i class="mdi-action-label-outline prefix"></i>
-      {{> partialDatePicker date=t1}}
-      <label for='tile-t1' class="active">End Date</label>
-    </div>
-    <div id="tile-edit-content">{{{tile.content}}}</div>
-  </div>
-  <div class="modal-footer">
-    <button data-cancel-tile class="btn waves-effect waves-light modal-action grey">Cancel</button>
+  {{/modalizeBody}}
+
+  {{#modalizeFooter}}
+    <button data-modalize-close class="btn waves-effect waves-light modal-action grey">Cancel</button>
     <button data-save-tile class="btn waves-effect waves-light red">Save</button>
-  </div>
+  {{/modalizeFooter}}
 </template>
 
 <template name="tileEditForm">
@@ -67,14 +70,6 @@
         <label for='tile-content' class="{{activeOrNot tile.content}}">Content</label>
       </div>
     </div>
-
-<!--  <div class="modal-footer">
-    <button id="save-tile-edit" type="submit" class="btn waves-effect waves-light modal-action red"><i class="mdi-action-done left"></i>Done</button>
-    <button id="cancel-tile-edit" type="button" class="btn waves-effect waves-grey modal-action modal-close grey">Cancel</button>
-    <div class="progress">
-      <div class="indeterminate"></div>
-    </div>
-  </div>-->
 </template>
 
 <template name="categoryresult">
