--- a/client/views/settings/settings.html
+++ b/client/views/settings/settings.html
@@ -1,47 +1,53 @@
 <template name="settings">
-  <div class="settings-modal row">
-    <div id="settings-tabs-col" class="col s12">
-      <ul id="settings-tabs" class="tabs">
-        <li class="tab col s6">
-          <a href="#profile-settings" class="active">
-            <i class="mdi-social-person"></i>Profile
-          </a>
-        </li>
-        <li class="tab col s6">
-          <a href="#data-settings">
-            <i class="mdi-file-attachment"></i>Data
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div id="profile-settings" class="col s12">
-      <div>
-        <p>
-          Update your page's URL:
-        </p>
-        {{> settingsURL }}
+  {{#modalizeBody}}
+    <div class="settings-modal row">
+      <div id="settings-tabs-col" class="col s12">
+        <ul id="settings-tabs" class="tabs">
+          <li class="tab col s6">
+            <a href="#profile-settings" class="active">
+              <i class="mdi-social-person"></i>Profile
+            </a>
+          </li>
+          <li class="tab col s6">
+            <a href="#data-settings">
+              <i class="mdi-file-attachment"></i>Data
+            </a>
+          </li>
+        </ul>
       </div>
-    </div>
-    <div id="data-settings" class="col s12">
-      <div>
-        <p>
-          Backup and download your data to your local hard drive as an .xml file using the download button below:
-        </p>
-        <button data-backup type="button" class="waves-effect waves-light btn-large"><i class="mdi-file-file-download left"></i>Backup</button>
+      <div id="profile-settings" class="col s12">
+        <div>
+          <p>
+            Update your page's URL:
+          </p>
+          {{> settingsURL }}
+        </div>
       </div>
-      <div>
-        <p>
-          Restoring from backup will erase all your current data, and replace it with the backup data.  Your login information and URL will remain the same, however.
-        </p>
-        <div class="file-field input-field">
-          <div class="waves-effect waves-light btn-large">
-            <span><i class="mdi-file-file-upload left"></i>Upload</span>
-            <input data-restore type="file" />
+      <div id="data-settings" class="col s12">
+        <div>
+          <p>
+            Backup and download your data to your local hard drive as an .xml file using the download button below:
+          </p>
+          <button data-backup type="button" class="waves-effect waves-light btn-large"><i class="mdi-file-file-download left"></i>Backup</button>
+        </div>
+        <div>
+          <p>
+            Restoring from backup will erase all your current data, and replace it with the backup data.  Your login information and URL will remain the same, however.
+          </p>
+          <div class="file-field input-field">
+            <div class="waves-effect waves-light btn-large">
+              <span><i class="mdi-file-file-upload left"></i>Upload</span>
+              <input data-restore type="file" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  {{/modalizeBody}}
+
+  {{#modalizeFooter}}
+    <button data-modalize-close class="btn waves-effect waves-light modal-action grey">Close</button>
+  {{/modalizeFooter}}
 </template>
 
 <template name="settingsURL">
