--- a/client/views/tile/tile.html
+++ b/client/views/tile/tile.html
@@ -43,7 +43,9 @@
   {{/modalizeBody}}
 
   {{#modalizeFooter}}
-    <button data-modalize-close class="btn waves-effect waves-light modal-action grey"><i class="mdi-action-done left"></i>Done</button>
+    <a href="/{{publicURL}}">
+      <button data-modalize-close class="btn waves-effect waves-light modal-action grey"><i class="mdi-action-done left"></i>Done</button>
+    </a>
   {{/modalizeFooter}}
 </template>
 
